nixidy/generated/prod/nvidia-gpu-operator/Deployment-gpu-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: gpu-operator
    app.kubernetes.io/instance: nvidia-gpu-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gpu-operator
    nvidia.com/gpu-driver-upgrade-drain.skip: "true"
  name: gpu-operator
  namespace: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpu-operator
      app.kubernetes.io/component: gpu-operator
  template:
    metadata:
      annotations:
        openshift.io/scc: restricted-readonly
      labels:
        app: gpu-operator
        app.kubernetes.io/component: gpu-operator
        app.kubernetes.io/instance: nvidia-gpu-operator
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: gpu-operator
        nvidia.com/gpu-driver-upgrade-drain.skip: "true"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: In
                    values:
                      - ""
              weight: 1
            - preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: In
                    values:
                      - ""
              weight: 1
      containers:
        - args:
            - --leader-elect
            - --zap-time-encoding=epoch
            - --zap-log-level=info
          command:
            - gpu-operator
          image: nvcr.io/nvidia/gpu-operator:v24.9.2@sha256:92f5262bb4934e0ea29eb10ec0ad4fc293164f2f2f94d48a935922791abbfdac
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: gpu-operator
          ports:
            - containerPort: 8080
              name: metrics
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 350Mi
            requests:
              cpu: 200m
              memory: 100Mi
          volumeMounts:
            - mountPath: /host-etc/os-release
              name: host-os-release
              readOnly: true
      priorityClassName: system-node-critical
      serviceAccountName: gpu-operator
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Equal
          value: ""
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Equal
          value: ""
      volumes:
        - hostPath:
            path: /etc/os-release
          name: host-os-release
