nixidy/generated/prod/nvidia-gpu-operator/Deployment-nvidia-gpu-operator-node-feature-discovery-gc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nvidia-gpu-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: node-feature-discovery
    role: gc
  name: nvidia-gpu-operator-node-feature-discovery-gc
  namespace: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nvidia-gpu-operator
      app.kubernetes.io/name: node-feature-discovery
      role: gc
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nvidia-gpu-operator
        app.kubernetes.io/name: node-feature-discovery
        role: gc
    spec:
      containers:
        - args:
            - -gc-interval=1h
          command:
            - nfd-gc
          image: registry.k8s.io/nfd/node-feature-discovery:v0.16.6@sha256:19ebca8b3804bfe2ee7324de4873875ab0a9112b51e0ace9dfd7c470beecf4a9
          imagePullPolicy: IfNotPresent
          name: gc
          ports:
            - containerPort: 8081
              name: metrics
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: false
      priorityClassName: system-node-critical
      securityContext: {}
      serviceAccountName: node-feature-discovery
